# Maya-CurveBrush

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CmakeLists_libNameFilter.py  CurveBrush.mod  LICENSE  README.md  README_zh.md  cmakeBuild.bat  pyproject.toml
plug-ins/: om1_curve_brush.py  om2_curve_brush.py  py_curve_brush.py
plug-ins/2020/: curveBrush.mll
plug-ins/2022/: curveBrush.mll
plug-ins/2023/: curveBrush.mll
scripts/: curveBrushProperties.mel  curveBrushValues.mel  curve_brush_porperties.py  load_curve_brush_plugin.py  userSetup.py
scripts/_curve_brush/: __init__.py
scripts/ysv/: __init__.py  ysv.py  ysvApiWrapers.py  ysvCtx.py  ysvCurvesOps.py  ysvMath.py  ysvPaintCurves.py  ysvPlaceOnPolyCtx.py  ysvPolyOps.py  ysvTransforms.py  ysvTweakTesselationCtx.py  ysvUtils.py  ysvView.py
source/: curveBrushContext.cpp  curveBrushContext.h  curveBrushContextCmd.cpp  curveBrushContextCmd.h  curveBrushContextTool.cpp  curveBrushContextTool.h  pluginMain.cpp
